created server routes

--- a/server/.env
+++ b/server/.env
@@ -1,1 +1,2 @@
+OPENAI_API_KEY = "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"
 MONGODB_URL = "mongodb+srv://wellingtonmwadali:imgGenerationApp@cluster0.d9txezu.mongodb.net/?retryWrites=true&w=majority"
