--- a/server/.env
+++ b/server/.env
@@ -1,2 +1,3 @@
-OPENAI_API_KEY = "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"
+OPENAI_API_KEY = "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"
+openai = "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"
 MONGODB_URL = "mongodb+srv://wellingtonmwadali:imgGenerationApp@cluster0.d9txezu.mongodb.net/?retryWrites=true&w=majority"
