--- a/server/.env
+++ b/server/.env
@@ -1,5 +1,6 @@
-OPENAI_API_KEY = "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"
-openai = "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"
+OPENAI_API_KEY = "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"
 MONGODB_URL = "mongodb+srv://wellingtonmwadali:imgGenerationApp@cluster0.d9txezu.mongodb.net/?retryWrites=true&w=majority"
-CLOUDINARY_NAME = ""
-CLOUDINARY_NAME = ""
+
+CLOUDINARY_CLOUD_NAME = "dgv7woqkt"
+CLOUDINARY_API_KEY = "316562544577359"
+CLOUDINARY_API_SECRET_KEY = "HWWC-BSZnmfAzcg1Raq4_XuYjzs"
